--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ button {
     justify-content: center;
     gap: 36px;
     align-items: center;
+    padding-bottom: 100px;
 }
 
 .imglist {
@@ -145,7 +146,8 @@ ul.imglist {
 }
 
 .boxes .rectangle {
-    min-width: 100px;
+    max-width: 200px;
+    min-width: 200px;
     min-height: 100px;
     width: auto;
     height: auto;
@@ -154,4 +156,31 @@ ul.imglist {
     border: 2px solid #3882f6;
     border-radius: 10px;
     margin-bottom: 5px;
+}
+
+.info {
+    font-size: 24px;
+}
+.section3 {
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+    padding-bottom: 60px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: 200;
+}
+
+.citation {
+    text-align: center;
+    font-size: 24px;
+
+    
 }
